<resources>
    <string name="app_name">Drawing App</string>
    <string name="action_settings">Settings</string>
    <string name="action_erase">Erase</string>
    <string name="action_delete">Delete</string>
    <string name="action_undo">Undo</string>
    <string name="action_save">Save</string>
    <string name="action_color">Color Picker</string>
    <string name="action_brush">Brush Size</string>
    <string name="delete_drawing">Delete Drawing</string>
    <string name="new_drawing_warning">Are you sure you want to delete this?</string>

</resources>
